# OCOS-Chain

./: About.md  About_AZ.md
OCOS-Liquidity/: LICENSE
OCOS-Liquidity/ENERGY/: Notification.md  proof.json  verify.py
OCOS-Liquidity/contracts/: BTCReserveRegistry.sol
OCOS-Liquidity/docs/: RESERVE_EVM_ADDRESSES.json
OCOS-Liquidity/scripts/: add_solana_reserves.sh  register_reserves.ts
OCOS-Router-Protocol/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE  README.md  SECURITY.md  foundry.toml
OCOS-Router-Protocol/.github/: PULL_REQUEST_TEMPLATE.md
OCOS-Router-Protocol/contracts/: RouterCore.sol
OCOS-Router-Protocol/script/: Deploy.s.sol
OCOS-Router-Protocol/solana/: Cargo.toml
OCOS-Router-Protocol/solana/programs/orp_router/: Cargo.toml
OCOS-Router-Protocol/solana/programs/orp_router/src/: lib.rs
OCOS-Router-Protocol/test/: RouterCore.t.sol
api/graphql/: README.md  context.rs  directives.rs  error.rs  extensions.rs  middleware.rs  mod.rs  schema.rs  subscriptions.rs  tests.rs  types.rs
api/rest/: README.md  README_AZ.md  auth.rs  docs.rs  error.rs  middleware.rs  mod.rs  routes.rs  tests.rs  types.rs  version.rs
api/ws/: README.md  auth.rs  docs.rs  extensions.rs  middleware.rs  mod.rs  protocol.rs  router.rs  tests.rs  types.rs
contracts/audit/: README.md  README_AZ.md  compliance.rs  error.rs  event.rs  hash.rs  index.rs  log.rs  metrics.rs  mod.rs  proof.rs  storage.rs  tests.rs  trace.rs  types.rs
core/: mod.rs
doc/: price.md  price_AZ.md
ocos-gpt/: .env.example  .gitignore  package.json  tailwind.config.ts  tsconfig.json
(+320 files in other folders)
